Fix search hidden behind info box #248

--- a/src/scss/components/search.scss
+++ b/src/scss/components/search.scss
@@ -52,6 +52,7 @@
   background: #000;
   left: 0;
   right: 0;
+  z-index: 1000;
 }
 .menu-search .awesomplete li {
   padding: .75rem 1rem;
